--- a/chat/chat.css
+++ b/chat/chat.css
@@ -1,5 +1,5 @@
 .rcw-conversation-container .rcw-header {
-	background-color: rgb(14, 124, 207);
+	background-color: #30A8DA;
 	border-radius: 10px 10px 0 0;
 	color: #fff;
 	display: -ms-flexbox;
@@ -46,7 +46,7 @@
 }
 
 .rcw-full-screen .rcw-close-button {
-	background-color: rgb(14, 124, 207);
+	background-color: #30A8DA;
 	border: 0;
 	display: block;
 	position: absolute;
@@ -71,7 +71,7 @@
 		padding: 0 0 15px
 	}
 	.rcw-conversation-container .rcw-close-button {
-		background-color: rgb(14, 124, 207);
+		background-color: #30A8DA;
 		border: 0;
 		display: block;
 		position: absolute;
@@ -106,7 +106,7 @@
 }
 
 .rcw-client .rcw-message-text {
-	background-color: #B6D7F0;
+	background-color: #B4E7FF;
 	border-radius: 10px;
 	padding: 15px;
 	max-width: 215px;
@@ -136,7 +136,8 @@
 }
 
 .rcw-message-text p {
-	margin: 0
+	margin: 0;
+	color: rgba(0, 0, 0, 0.87);
 }
 
 .rcw-avatar {
@@ -171,7 +172,7 @@
 .quick-button {
 	background: none;
 	border-radius: 15px;
-	border: 2px solid rgb(14, 124, 207);
+	border: 2px solid #30A8DA;
 	font-weight: 700;
 	padding: 5px 10px;
 	cursor: pointer;
@@ -179,7 +180,7 @@
 }
 
 .quick-button:active {
-	background: rgb(14, 124, 207);
+	background: #30A8DA;
 	color: #fff
 }
 
@@ -397,7 +398,7 @@
 	animation-fill-mode: forwards;
 	-ms-flex-item-align: end;
 	align-self: flex-end;
-	background-color: rgb(14, 124, 207);
+	background-color: #30A8DA;
 	border: 0;
 	border-radius: 50%;
 	box-shadow: 0 2px 10px 1px #b5b5b5;
